--- a/SA/testing-center.ipynb
+++ b/SA/testing-center.ipynb
@@ -4,10 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"text-align: center;\"> <h3>Introduction to Data Science</h3>\n",
+    "<div style=\"text-align: center;\"> <h1>What Makes a Great NBA Player?</h1>\n",
     "<h5>A Business Intelligence Report</h5>\n",
-    "<h5><u>By Jordan Dacancay, Romand Lansangan, and Zion Ramillo</u></h5>\n",
-    "    <h4>Group: Lihim Ni Victor</h4>\n",
+    "<h5><u>By Romand Lansangan</u></h5>\n",
     "    </div>\n",
     "    \n",
     "---"
@@ -17,9 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# What Makes a Great NBA Player?\n",
     "## Introduction\n",
-    "\n",
     "With great competition comes with great comparison, especially in the realm of highly competitive modern sports league like the NBA. It thus become imperative to provide an accurate, standardized, and intuitive metric to compare different player's performance to distinguish, bad from good and good from great players. One such metric is the GameScore (GmSc) by John Holligner. \n",
     "\n",
     "##### GameScore (GmSc)\n",
@@ -34,6 +31,8 @@
     "\n",
     "## Principal Component Analysis (PCA)\n",
     "PCA, in simple sense, simplify complex data by finding patterns and looking for correlation between different variables. By looking at their correlation, PCA will combine the correlated variables and put them in a single component (*principal component*). After that, PCA will rank the variables by how much variation (or 'importance') each component has. The more variant a component is, the more important it is because it helps us distinguish between high performing and low performing players. As opposed to lower variance, it may only mean noise so this doesn't help us much when distinguishing player's performances. These \"importance\" will serve as a weight for the final formula.\n",
+    "\n",
+    "A good analogy to understand PCA is distinguishing between people. To distinguish Person A to Person B, one might opt to focus on their facial feautures in which they are different (thus high variance). If one focus on a feauture that is simillar, let's say nose, one will have a hard time pointing which is which. \n",
     "\n",
     "### PCA Assumptions\n",
     "1. **PCA assumes a correlation between features**. If the features (or dimensions or columns, in tabular data) are not correlated, PCA will be unable to determine principal components.\n",
@@ -300,12 +299,12 @@
    "metadata": {},
    "source": [
     "### Combining Duplicated rows\n",
-    "as it turns out, players who were traded half-way have separate entry. Before we could proceed accordingly, it is imperative to combine them."
+    "as it turns out, players who were traded half-way have separate rows. Before we could proceed accordingly, it is imperative to combine them."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,39 +312,39 @@
     "    return (series * weights).sum() / weights.sum()\n",
     "\n",
     "aggregation_dict = {\n",
-    "    'mp_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),   # Weighted minutes\n",
-    "    'fg_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),   # Weighted field goals\n",
-    "    'fga_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),  # Weighted field goal attempts\n",
-    "    'fg_percent': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),    # Weighted FG%\n",
-    "    'x3p_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),  # Weighted 3-pointers made\n",
-    "    'x3pa_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']), # Weighted 3-point attempts\n",
-    "    'x3p_percent': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),   # Weighted 3P%\n",
-    "    'x2p_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),  # Weighted 2-pointers made\n",
-    "    'x2pa_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']), # Weighted 2-point attempts\n",
-    "    'x2p_percent': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),   # Weighted 2P%\n",
-    "    'e_fg_percent': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),  # Weighted Effective FG%\n",
-    "    'ft_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),   # Weighted free throws\n",
-    "    'fta_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),  # Weighted free throw attempts\n",
-    "    'ft_percent': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),    # Weighted FT%\n",
-    "    'orb_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),  # Weighted offensive rebounds\n",
-    "    'drb_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),  # Weighted defensive rebounds\n",
-    "    'trb_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),  # Weighted total rebounds\n",
-    "    'ast_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),  # Weighted assists\n",
-    "    'stl_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),  # Weighted steals\n",
-    "    'blk_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),  # Weighted blocks\n",
-    "    'tov_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),  # Weighted turnovers\n",
-    "    'pf_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),   # Weighted personal fouls\n",
-    "    'pts_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),  # Weighted points\n",
+    "    'mp_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),   # minutes\n",
+    "    'fg_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),   # field goals\n",
+    "    'fga_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),  # field goal attempts\n",
+    "    'fg_percent': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),    # FG%\n",
+    "    'x3p_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),  # 3-pointers made\n",
+    "    'x3pa_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']), # 3-point attempts\n",
+    "    'x3p_percent': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),   # 3P%\n",
+    "    'x2p_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),  # 2-pointers made\n",
+    "    'x2pa_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']), # 2-point attempts\n",
+    "    'x2p_percent': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),   # 2P%\n",
+    "    'e_fg_percent': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),  # Effective FG%\n",
+    "    'ft_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),   # free throws\n",
+    "    'fta_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),  # free throw attempts\n",
+    "    'ft_percent': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),    # FT%\n",
+    "    'orb_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),  # offensive rebounds\n",
+    "    'drb_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),  # defensive rebounds\n",
+    "    'trb_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),  # total rebounds\n",
+    "    'ast_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),  # assists\n",
+    "    'stl_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),  # steals\n",
+    "    'blk_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),  # blocks\n",
+    "    'tov_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),  # turnovers\n",
+    "    'pf_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),   # personal fouls\n",
+    "    'pts_per_game': lambda x: weighted_mean(x, df_season_stats.loc[x.index, 'g']),  # points\n",
     "}\n",
     "\n",
     "additional_aggregation = {\n",
-    "    'seas_id': 'first',  # Keep the first season ID\n",
-    "    'player': 'first',   # Keep the player's name\n",
-    "    'birth_year': 'first',  # Keep birth year\n",
-    "    'pos': 'first',  # Keep the first position\n",
-    "    'age': 'mean',   # Average age\n",
-    "    'experience': 'mean',  # Average experience\n",
-    "    'g': 'sum'       # Total games played\n",
+    "    'seas_id': 'first',\n",
+    "    'player': 'first', \n",
+    "    'birth_year': 'first',  \n",
+    "    'pos': 'first',  \n",
+    "    'age': 'mean',  \n",
+    "    'experience': 'mean', \n",
+    "    'g': 'sum'\n",
     "}\n",
     "\n",
     "aggregation_dict.update(additional_aggregation)\n",
@@ -752,7 +751,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Defining Eligible Positions"
+    "### Defining Eligible Positions\n",
+    "In here, we mapped the raw positions to eligible positions:\n",
+    "* PG and SG becomes G\n",
+    "* SF and PF becomes F\n",
+    "* C was retained."
    ]
   },
   {
@@ -1010,7 +1013,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Aggregate Stats By Season"
+    "### Aggregate Stats By Season\n",
+    "League averages by season"
    ]
   },
   {
@@ -1240,7 +1244,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Aggregate Stats By Season and Positions"
+    "### Aggregate Stats By Season and Positions\n",
+    "League averages by season and positions (G, F, C)"
    ]
   },
   {
@@ -1468,11 +1473,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
-    "### Calculate Deviations By Season (Player minus Average)"
+    "### Calculate Deviations By Season (Player minus Average)\n",
+    "We calculate the deviations for each players stats with respect to their season (and positions on separate dataframe below). This is essentially calculating for how far does player differentiate or deviate from the average player. This is to make the statistics free from seasonal (and positional) context."
    ]
   },
   {
@@ -1981,7 +1985,7 @@
     "scrolled": true
    },
    "source": [
-    "## PCA By Season\n",
+    "## Filtering Stats\n",
     "\n",
     "Since in game score, only the pts, fg, fga, fta, ft, orb, drb, stl, ast, blk, pf, tov are considered, let's filter out the data to only accomodate for this."
    ]
@@ -2156,6 +2160,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# PCA By Season\n",
+    "\n",
     "### Assumption 1: PCA assumes a correlation between features\n",
     "This holds in our dataset due to some columns being correlated. For example, pts per game and fg_per_game and fga_per_game are all highly correlated to each other. "
    ]
@@ -2903,6 +2909,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# PCA By Season and Position\n",
+    "\n",
     "## Positions Specific Weights"
    ]
   },
@@ -4321,14 +4329,14 @@
    "source": [
     "## Key Insights\n",
     "\n",
-    "#### Discrepancy Between PCA-Derived Weights and Game Score (GmSc) Weights:\n",
-    "- The PCA weights differ significantly from GameScore weights, implicating that the GmSc does not fully reflect a player's productivity (at least in terms of the importance it places on different statistical measures in basketball)\n",
-    "- GmSc also overlooks the nuances of positional context that significantly impact a player's statistical scores by overgeneralizing the stats across different positions.\n",
-    "\n",
     "#### Relative Performance Analysis:\n",
     "- Clustering was done to make the data set seasonal and positional context free.\n",
     "- The analysts computed for deviations centered around seasonal averages in the same season for overall weigts while position average in the same season was used for the positional weights. \n",
     "- This ensures that comparisons are made on a level playing field, highlighting players who excel in their specific contexts rather than relying on a one-size-fits-all formula like GmSc.\n",
+    "\n",
+    "#### Discrepancy Between PCA-Derived Weights and Game Score (GmSc) Weights:\n",
+    "- The PCA weights differ significantly from GameScore weights, implicating that the GmSc does not fully reflect a player's productivity (at least in terms of the importance it places on different statistical measures in basketball)\n",
+    "- GmSc also overlooks the nuances of positional context that significantly impact a player's statistical scores by overgeneralizing the stats across different positions.\n",
     "\n",
     "#### Context-Specific Adjustments via Clustering:\n",
     "- The result of PCA weights with considerations to different positions (Guards, Forwards, and Centers) produced distinct results in terms of their importance of a specific statistics score, like for guards `assists` are more important than `blocks` when the other way around is the case for centers.\n",
