--- a/NBA/NBA_Cluster.ipynb
+++ b/NBA/NBA_Cluster.ipynb
@@ -3366,7 +3366,7 @@
    "id": "efcc1dbc",
    "metadata": {},
    "source": [
-    "Explanation here is in order. We used \"std\" instead of \"mean\" as an indicator for each cluster because we want to get how far apart are the values from each statistics under a certain cluster. So the lowest \"std\" of a cluster will be the statistic in which all the players under this cluster are simillar."
+    "Explanation here is in order. We used \"std\" as an indicator for each cluster because we want to get how far apart are the values from each statistics under a certain cluster. So the lowest \"std\" of a cluster will be the statistic in which all the players under this cluster are simillar."
    ]
   },
   {
