Added comments on Recommendation part

--- a/NBA/NBA_Cluster.ipynb
+++ b/NBA/NBA_Cluster.ipynb
@@ -6072,7 +6072,9 @@
     "Also, more robust method could also be used like *HDBSCAN* that will give us higher silhouette score. *HDBSCAN* was actually used initially and it resulted to a sillhuette score of around 60 which is good compared to the final model. This  is because *HDBSCAN* is more robust to the shape of the clusters. However, *HDBSCAN* failed to produce any meaningful clusters, at least for the objective of grouping NBA players based on their playstyle. The basic *Hierarchical Clustering* however gave us something we can work for so it is no brainer to choose it over *HDBSCAN* even if the earlier has lower sillhuette score.\n",
     "\n",
     "## Recommendation\n",
-    "The data may also include the team statistics like wins, losses, and ratings to take into account the intangibles. Furthermore, a deeper dive at the effect of players could also be investigated by comparing the times were players were in the court and outside the court. "
+    "The data may also include the team statistics like wins, losses, and ratings to take into account the intangibles. Furthermore, a deeper dive at the effect of players could also be investigated by comparing the times were players were in the court and outside the court. \n",
+    "\n",
+    "It would also be beneficial if we could somehow get where in the court a player shot the ball or how much time do they spent guarding the other team's best player. Statistics that are subtle but will be helpful to further make sense of each player's style."
    ]
   }
  ],
